<resources>
    <string name="app_name">Wynajem</string>
    <string name="signin">Zaloguj się</string>
    <string name="register_text">Nie masz jeszcze konta? ZAREJESTRUJ SIĘ!</string>
    <string name="name">Imię</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="c_password">Powtórz hasło</string>
    <string name="register">Zarejestruj się</string>
    <string name="back_signin">Masz już konto? ZALOGUJ SIĘ</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
